Updated chart with coloring, tooltips, and other various improvements

--- a/force-app/main/default/lwc/d3GanttChart/d3GanttChart.css
+++ b/force-app/main/default/lwc/d3GanttChart/d3GanttChart.css
@@ -1,4 +1,16 @@
 .chart-container {
     height: 500;
     width: 700;
+    position: relative;
+}
+
+.tooltip {
+    position: absolute;
+    background-color: rgb(80, 72, 85);
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    min-width: 100px;
+    text-align: center;
+    color: white;
 }
